# ThePromptMachine

./: CMakeLists.txt  LICENSE  README.md
cmake/: build.cmake
common/math/: CMakeLists.txt
common/math/inc/: Hexagon.h  HexagonGrid.h  Line.hpp  MathUtils.hpp  Matrix.h  Motion2f.h  Motion3f.h  Ngon.h  Noise.h  Point.hpp  Quad.hpp  Quaternion.h  Ray.h  SimplePolygon.h  Size.hpp  Triangle.h  Vector3.hpp
common/math/src/: Hexagon.cpp  HexagonGrid.cpp  Matrix.cpp  Motion2f.cpp  Motion3f.cpp  Ngon.cpp  Noise.cpp  Quaternion.cpp  Ray.cpp  Triangle.cpp
common/qt_utility/: CMakeLists.txt
common/qt_utility/inc/: QCircularPainter.h  UIColorLabel.h  UIColorPicker.h  UIRichTextEdit.h  UITextEdit.h  UIUtils.hpp
common/qt_utility/resx/: resources.qrc
common/qt_utility/src/: QCircularPainter.cpp  UIColorLabel.cpp  UIColorPicker.cpp  UIColorPicker.ui  UIRichTextEdit.cpp  UIRichTextEdit.ui  UITextEdit.cpp
common/utility/: CMakeLists.txt
common/utility/inc/: Exception.hpp  FileUtils.hpp  Grid.hpp  StringUtils.hpp  SystemUtils.hpp  XMLDataElement.h  XMLStreamWriter.h
common/utility/src/: StringList.cpp  XMLStreamWriter.cpp  XMLUtils.cpp
common/utility/tests/src/: test_FileUtils.cpp  test_StringUtils.cpp
products/ThePromptMachine/: CMakeLists.txt
products/ThePromptMachine/inc/: PromptSession.h  UIPromptMachineEditor.h  UIPromptMachineSessionList.h  UIPromptMachineViewer.h
products/ThePromptMachine/resx/: resources.qrc
products/ThePromptMachine/src/: PromptSession.cpp  UIPromptMachineEditor.cpp  UIPromptMachineEditor.ui  UIPromptMachineSessionList.cpp  UIPromptMachineSessionList.ui  UIPromptMachineViewer.cpp  UIPromptMachineViewer.ui  main.cpp
